post name overhaul test run

--- a/MopsTest.ipynb
+++ b/MopsTest.ipynb
@@ -14,6 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import runMops as mops\n",
+    "#import MopsPlotter as mpp\n",
     "from MopsParameters import MopsParameters\n",
     "from MopsTracker import MopsTracker\n",
     "\n",
@@ -57,7 +58,7 @@
     "name = 'testRun'\n",
     "nightlySources = 'nightly/'\n",
     "parameters = MopsParameters()\n",
-    "tracker = MopsTracker(name, parameters)"
+    "tracker = MopsTracker(name)"
    ]
   },
   {
@@ -77,9 +78,11 @@
       "\tCreated tracklets/ directory.\n",
       "\tCreated trackletsCollapsed/ directory.\n",
       "\tCreated trackletsPurified/ directory.\n",
+      "\tCreated trackletsFinal/ directory.\n",
       "\tCreated trackletsByNight/ directory.\n",
       "\tCreated tracks/ directory.\n",
       "\n",
+      "Saving MopsParameters to testRun/parameters.yaml\n",
       "---- findTracklets ----\n",
       "\n",
       "---- idsToIndices.py ----\n",
@@ -88,26 +91,30 @@
       "\n",
       "---- purifyTracklets ----\n",
       "\n",
+      "---- removeSubsets ----\n",
+      "\n",
       "---- indicesToIds.py ----\n",
       "\n",
       "---- makeLinkTrackletsInput_byNight.py ----\n",
       "\n",
       "---- linkTracklets ----\n",
-      "testRun/tracks/night_54466_through_54468.track\n",
       "\n",
       "Current run status:\n",
       "\tfindTracklets:                     True\n",
       "\tidsToIndices.py:                   True\n",
       "\tcollapseTracklets:                 True\n",
       "\tpurifyTracklets:                   True\n",
+      "\tremoveSubsets                      True\n",
       "\tindicesToIds.py:                   True\n",
       "\tmakeLinkTrackletsInputByNight.py:  True\n",
-      "\tlinkTracklets:                     True\n"
+      "\tlinkTracklets:                     True\n",
+      "Saving MopsTracker to testRun/tracker.yaml\n"
      ]
     }
    ],
    "source": [
-    "mops.runMops('nightly/', 'testRun', parameters, tracker)"
+    "! rm -rf {name}\n",
+    "mops.runMops(parameters, tracker, 'nightly/', 'testRun')"
    ]
   },
   {
@@ -118,10 +125,12 @@
    },
    "outputs": [],
    "source": [
+    "diasources = tracker.diaSources\n",
     "tracklets = tracker.tracklets\n",
     "trackletsByIndex = tracker.trackletsByIndex\n",
     "collapsed = tracker.collapsedTracklets\n",
     "purified = tracker.purifiedTracklets\n",
+    "final = tracker.finalTracklets\n",
     "trackletsById = tracker.trackletsById\n",
     "dets = tracker.trackletsByNightDets\n",
     "ids = tracker.trackletsByNightIds\n",
@@ -139,81 +148,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?1h\u001b=\r",
-      "0 1 \r\n",
-      "2 3 \r\n",
-      "4 5 \r\n",
-      "\r",
-      "\u001b[K\u001b[?1l\u001b>"
+      "['testRun/tracklets/54466.tracklet', 'testRun/tracklets/54467.tracklet', 'testRun/tracklets/54468.tracklet']\n"
      ]
     }
    ],
    "source": [
-    "! more {purified[0]}"
+    "print tracklets\n",
+    "\n",
+    "collapsed = np.loadtxt(collapsed[0])\n",
+    "purified = np.loadtxt(purified[0])\n",
+    "tracks = np.loadtxt(tracks[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[?1h\u001b=\r",
-      "0 1 2 3 4 5 \r\n",
-      "6 7 8 9 10 11 \r\n",
-      "12 13 14 15 16 17 \r\n",
-      "\r",
-      "\u001b[K\u001b[?1l\u001b>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! more {tracks[0]}"
+    "dbname = 'testData/testsources.db'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  1.],\n",
-       "       [ 2.,  3.],\n",
-       "       [ 4.,  5.]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.loadtxt(purified[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dbname = 'testsources.db'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -505,13 +465,58 @@
        "17    5  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mpp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-0e322db652a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmpp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjectPlot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'1'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'3'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'testsources'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'mpp' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "mpp.objectPlot(['1','2','3'],'testsources', con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mpp.objectPlot(['1'],'testsources', con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tracklets"
    ]
   },
   {
