--- a/subsampleAnalysis.ipynb
+++ b/subsampleAnalysis.ipynb
@@ -1989,14 +1989,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# The few cells will be cleaned up and implemented as part of the analysis run. "
+    "# The few cells above will be cleaned up and implemented as part of the analysis run. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
