--- a/notebooks/colinAnalysis.ipynb
+++ b/notebooks/colinAnalysis.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joachim/anaconda/lib/python2.7/site-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.\n",
-      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sqlite3 as sql\n",
     "import pandas as pd\n",
@@ -38,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1836,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1857,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1871,6 +1862,9 @@
       "\n",
       "Initializing new results object...\n",
       "Creating DiaSources table...\n",
+      "Creating AllObjects table...\n",
+      "Creating FoundObjects view...\n",
+      "Creating MissedObjects view...\n",
       "Creating AllTracklets table...\n",
       "Creating TrackletMembers table...\n",
       "Creating Tracklets view...\n",
@@ -1878,8 +1872,14 @@
       "Creating PurifiedTracklets view...\n",
       "Creating FinalTracklets view...\n",
       "\n",
-      "Reading detections into database...\n",
-      "Starting tracklet analysis for night 56398 at Tue Mar 15 11:21:48 2016\n",
+      "Reading full detections file into dataframe...\n",
+      "Counting findable objects as tracklets...\n",
+      "Counting findable objects as tracks...\n",
+      "Building objects dataframe...\n",
+      "Updating objects dataframe...\n",
+      "Reading full detections file into database...\n",
+      "Starting tracklet analysis for night 56398 at Fri Mar 18 14:59:43 2016\n",
+      "\n",
       "- Writing results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/56398.results\n",
       "- Checking file sizes...\n",
       "- Reading input detections...\n",
@@ -1894,6 +1894,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing collapsed tracklets...\n",
@@ -1903,6 +1904,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing purified tracklets...\n",
@@ -1912,6 +1914,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing final tracklets...\n",
@@ -1921,15 +1924,17 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Converting dataframes to sqlite tables...\n",
       "Updating TrackletMembers tables...\n",
       "Updating AllTracklets tables...\n",
       "\n",
-      "Finished tracklet analysis for night 56398 at Tue Mar 15 11:22:18 2016\n",
+      "Finished tracklet analysis for night 56398 at Fri Mar 18 15:00:09 2016\n",
       "\n",
-      "Starting tracklet analysis for night 56399 at Tue Mar 15 11:22:18 2016\n",
+      "Starting tracklet analysis for night 56399 at Fri Mar 18 15:00:09 2016\n",
+      "\n",
       "- Writing results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/56399.results\n",
       "- Checking file sizes...\n",
       "- Reading input detections...\n",
@@ -1944,6 +1949,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing collapsed tracklets...\n",
@@ -1953,6 +1959,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing purified tracklets...\n",
@@ -1962,6 +1969,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing final tracklets...\n",
@@ -1971,15 +1979,17 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Converting dataframes to sqlite tables...\n",
       "Updating TrackletMembers tables...\n",
       "Updating AllTracklets tables...\n",
       "\n",
-      "Finished tracklet analysis for night 56399 at Tue Mar 15 11:22:18 2016\n",
+      "Finished tracklet analysis for night 56399 at Fri Mar 18 15:00:09 2016\n",
       "\n",
-      "Starting tracklet analysis for night 56400 at Tue Mar 15 11:22:18 2016\n",
+      "Starting tracklet analysis for night 56400 at Fri Mar 18 15:00:09 2016\n",
+      "\n",
       "- Writing results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/56400.results\n",
       "- Checking file sizes...\n",
       "- Reading input detections...\n",
@@ -1994,6 +2004,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing collapsed tracklets...\n",
@@ -2003,6 +2014,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing purified tracklets...\n",
@@ -2012,6 +2024,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing final tracklets...\n",
@@ -2021,15 +2034,17 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Converting dataframes to sqlite tables...\n",
       "Updating TrackletMembers tables...\n",
       "Updating AllTracklets tables...\n",
       "\n",
-      "Finished tracklet analysis for night 56400 at Tue Mar 15 11:22:19 2016\n",
+      "Finished tracklet analysis for night 56400 at Fri Mar 18 15:00:10 2016\n",
       "\n",
-      "Starting tracklet analysis for night 56401 at Tue Mar 15 11:22:19 2016\n",
+      "Starting tracklet analysis for night 56401 at Fri Mar 18 15:00:10 2016\n",
+      "\n",
       "- Writing results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/56401.results\n",
       "- Checking file sizes...\n",
       "- Reading input detections...\n",
@@ -2044,6 +2059,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing collapsed tracklets...\n",
@@ -2053,6 +2069,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing purified tracklets...\n",
@@ -2062,6 +2079,7 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing final tracklets...\n",
@@ -2071,13 +2089,14 @@
       "- Appended new tracklets to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Converting dataframes to sqlite tables...\n",
       "Updating TrackletMembers tables...\n",
       "Updating AllTracklets tables...\n",
       "\n",
-      "Finished tracklet analysis for night 56401 at Tue Mar 15 11:23:10 2016\n",
+      "Finished tracklet analysis for night 56401 at Fri Mar 18 15:00:54 2016\n",
       "\n",
       "Saving tracker to /Volumes/DataCenter/neosimData/colin_2016_03_14/tracker.yaml\n",
       "Saving tracker to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/tracker.yaml\n",
@@ -2088,7 +2107,8 @@
       "Creating Tracks view...\n",
       "Creating FinalTracks view...\n",
       "\n",
-      "Starting track analysis for window (nights: 56398 - 56401) at Tue Mar 15 11:23:11 2016\n",
+      "Starting track analysis for window (nights: 56398 - 56401) at Fri Mar 18 15:00:54 2016\n",
+      "\n",
       "- Writing results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/56398-56401.results\n",
       "- Checking file sizes...\n",
       "- Counting number of input tracks...\n",
@@ -2108,6 +2128,7 @@
       "- Calculating performance...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing final tracks...\n",
@@ -2117,20 +2138,22 @@
       "- Appended new tracks to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Converting dataframes to sqlite tables...\n",
-      "Updating TrackMembers tables...\n",
-      "Updating AllTracks tables...\n",
+      "Updating TrackMembers table...\n",
+      "Updating AllTracks table...\n",
       "\n",
-      "Finished track analysis for window (nights: 56398 - 56401) at Tue Mar 15 11:23:11 2016\n",
+      "Finished track analysis for window (nights: 56398 - 56401) at Fri Mar 18 15:00:54 2016\n",
       "\n",
       "Creating AllTracks table...\n",
       "Creating TrackMembers table...\n",
       "Creating Tracks view...\n",
       "Creating FinalTracks view...\n",
       "\n",
-      "Starting track analysis for window (nights: 56399 - 56401) at Tue Mar 15 11:23:11 2016\n",
+      "Starting track analysis for window (nights: 56399 - 56401) at Fri Mar 18 15:00:54 2016\n",
+      "\n",
       "- Writing results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/56399-56401.results\n",
       "- Checking file sizes...\n",
       "- Counting number of input tracks...\n",
@@ -2150,6 +2173,7 @@
       "- Calculating performance...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Analyzing final tracks...\n",
@@ -2159,23 +2183,29 @@
       "- Appended new tracks to dataframes...\n",
       "- Updating results object...\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "- Updating objects dataframe...\n",
       "- Writing results to outfile...\n",
       "\n",
       "Converting dataframes to sqlite tables...\n",
-      "Updating TrackMembers tables...\n",
-      "Updating AllTracks tables...\n",
+      "Updating TrackMembers table...\n",
+      "Updating AllTracks table...\n",
       "\n",
-      "Finished track analysis for window (nights: 56399 - 56401) at Tue Mar 15 11:23:11 2016\n",
+      "Finished track analysis for window (nights: 56399 - 56401) at Fri Mar 18 15:00:54 2016\n",
       "\n",
       "Saving tracker to /Volumes/DataCenter/neosimData/colin_2016_03_14/tracker.yaml\n",
       "Saving tracker to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/tracker.yaml\n",
       "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results.yaml\n",
-      "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n"
+      "Saving results to /Volumes/DataCenter/neosimData/colin_2016_03_14/results/results.yaml\n",
+      "\n",
+      "Converting object dataframe to sqlite table...\n",
+      "Updating AllObjects table...\n",
+      "\n",
+      "Analysis finished.\n"
      ]
     }
    ],
    "source": [
-    "results = MopsAnalysis.analyze(parameters, tracker, fullDetFile=dataDrive + \"neosimData/colin/dia_sources_to_mops_mod.dat\", overwrite=True)"
+    "results, df = MopsAnalysis.analyze(parameters, tracker, fullDetFile=dataDrive + \"neosimData/colin/dia_sources_to_mops_mod.dat\", overwrite=True)"
    ]
   },
   {
