--- a/notebooks/smallSubsampleAnalysis.ipynb
+++ b/notebooks/smallSubsampleAnalysis.ipynb
@@ -23,6 +23,7 @@
     "import MopsPlotter\n",
     "from MopsTracker import MopsTracker\n",
     "from MopsParameters import MopsParameters\n",
+    "from MopsResults import MopsResults\n",
     "\n",
     "\n",
     "% matplotlib inline"
@@ -977,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1051,7 +1052,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1121,7 +1122,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1226,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1249,7 +1250,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2904,6 +2905,68 @@
    ],
    "source": [
     "results, df = MopsAnalysis.analyze(parameters, tracker, fullDetFile=subsampleData, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading results from /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = MopsResults.fromYaml(runLocation + \"results.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import MopsDatabase\n",
+    "import MopsPlotter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Cannot attach more than 10 databases...\n",
+      "Proceeding with the first 10 databases...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51029-51044.db to con as db0...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51030-51045.db to con as db1...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51033-51048.db to con as db2...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51034-51049.db to con as db3...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51036-51051.db to con as db4...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51041-51056.db to con as db5...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51044-51056.db to con as db6...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51045-51060.db to con as db7...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51046-51061.db to con as db8...\n",
+      "Attaching /Volumes/DataCenter/neosimData/ldm156_subsample_small/subsampleRun/results/51048-51061.db to con as db9...\n"
+     ]
+    }
+   ],
+   "source": [
+    "con = sql.connect(tracker.mainDatabase)\n",
+    "window_dbs = MopsDatabase.attachDatabases(con, tracker.windowDatabases)"
    ]
   },
   {
